--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,7 +8,7 @@
     <header>
       <h1>Blog</h1>
       <nav>
-        <a href="/signup">Sign up</a>
+        <a href="/">Home</a> - <a href="/signup">Sign up</a>
       </nav>
     </header>
     {% block content %}
