--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Udacity Project - Multi User Blog</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Blog | {% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="/static/css/font-awesome/font-awesome.css">
+    <link rel="stylesheet" href="/static/css/master.css">
   </head>
   <body>
     <header>
@@ -13,5 +17,7 @@
     </header>
     {% block content %}
     {% endblock %}
+    <script src="/static/js/jquery/jquery.min.js"></script>
+    <script src="/static/js/bootstrap-sass/bootstrap.min.js"></script>
   </body>
 </html>
