--- a/src/templates/signup/signup.html
+++ b/src/templates/signup/signup.html
@@ -7,24 +7,38 @@ Sign up
 {% block content %}
   <h1>Sign up</h1>
 
-  {% if errors is defined %}
-    {% for key, value in errors.items() %}
-      {{ value }}<br>
-    {% endfor %}
-  {% endif %}
-
   <form method="post">
-    <label for="Email">Email</label>
-    <input type="text" id="email" placeholder="Email" name="email" value="{{ datas['email'] }}">
+    {{ form.email.label }}
+    {{ form.email() }}
+    {% if form.email.errors %}
+      {% for error in form.email.errors %}
+        {{ error }}
+      {% endfor %}
+    {% endif %}
     <br>
-    <label for="username">Username</label>
-    <input type="text" id="username" placeholder="Username" name="username" value="{{ datas['username'] }}">
+    {{ form.username.label }}
+    {{ form.username() }}
+    {% if form.username.errors %}
+      {% for error in form.username.errors %}
+        {{ error }}
+      {% endfor %}
+    {% endif %}
     <br>
-    <label for="password">Password</label>
-    <input type="password" id="password" placeholder="Password" name="password" value="">
+    {{ form.password.label }}
+    {{ form.password() }}
+    {% if form.password.errors %}
+      {% for error in form.password.errors %}
+        {{ error }}
+      {% endfor %}
+    {% endif %}
     <br>
-    <label for="verify">Verify</label>
-    <input type="password" id="verify" placeholder="Password" name="verify" value="">
+    {{ form.confirm.label }}
+    {{ form.confirm() }}
+    {% if form.confirm.errors %}
+      {% for error in form.confirm.errors %}
+        {{ error }}
+      {% endfor %}
+    {% endif %}
     <br>
     <button type="submit">Submit</button>
   </form>
