--- a/src/templates/commons/navbar.html
+++ b/src/templates/commons/navbar.html
@@ -5,9 +5,12 @@
        <a class="navbar-brand" href="/">Blog</a>
      </div>
      <ul class="nav navbar-nav navbar-right">
+        {% if user %}
+        <li><a href="/logout">Logout</a></li>
+        {% else %}
         <li><a href="/login">Login</a></li>
         <li><a href="/signup">Signup</a></li>
-        <li><a href="/logout">Logout</a></li>
+        {% endif %}
       </ul>
    </div>
 </nav>
