Add addpost feature

--- a/src/templates/posts/add_post.html
+++ b/src/templates/posts/add_post.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}
-Home
+Add new post
 {% endblock%}
 
 {% block content %}
-  <h1>All posts</h1>
+  <h1>Add post</h1>
+  {% include "commons/post_form.html" %}
 {% endblock %}
