--- a/src/templates/commons/navbar.html
+++ b/src/templates/commons/navbar.html
@@ -6,8 +6,15 @@
      </div>
      <ul class="nav navbar-nav navbar-right">
         {% if user %}
-        <li><a href="/posts/add">New Post</a></li>
-        <li><a href="#">{{ user.username }}</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Posts <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/posts">My posts</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/posts/add">New post</a></li>
+          </ul>
+        </li>
+        <li><a href="/posts">{{ user.username }}</a></li>
         <li><a href="/logout">Logout</a></li>
         {% else %}
         <li><a href="/login">Login</a></li>
