--- a/src/templates/commons/post_details.html
+++ b/src/templates/commons/post_details.html
@@ -1,15 +1,8 @@
-{% if posts %}
-  {% for post in posts %}
-    {% if user %}
-      {% if post.user.key() == user.key() %}
-        <h3><a href="/posts/edit/{{ post.key().id() }}">Edit</a></h3>
-      {% endif %}
-    {% endif %}
+{% if post %}
     <a href="/post/view/{{ post.key().id() }}" alt="Link to article {{post.title}}">{{ post.title }}</a>
     <br>
     {{ post.content }}
     <br>
     Created by {{ post.user.username }} on {{ post.creation_date }}
     <hr>
-  {% endfor %}
 {% endif %}
