--- a/src/templates/commons/post_details.html
+++ b/src/templates/commons/post_details.html
@@ -1,5 +1,5 @@
 {% if post %}
-    <a href="/post/view/{{ post.key().id() }}" alt="Link to article {{post.title}}">{{ post.title }}</a>
+    <a href="/posts/view/{{ post.key().id() }}" alt="Link to article {{post.title}}">{{ post.title }}</a>
     <br>
     {{ post.content }}
     <br>
