--- a/src/templates/posts/edit.html
+++ b/src/templates/posts/edit.html
@@ -6,5 +6,5 @@ Edit post
 
 {% block content %}
   <h1>Edit post</h1>
-  {% include "commons/post_form.html" %}
+  {% include "commons/posts/form.html" %}
 {% endblock %}
