--- a/src/templates/posts/list.html
+++ b/src/templates/posts/list.html
@@ -6,5 +6,5 @@ My posts
 
 {% block content %}
   <h1>Your posts</h1>
-  {% include "commons/posts_list.html" %}
+  {% include "commons/posts/list.html" %}
 {% endblock %}
