--- a/src/templates/home/page.html
+++ b/src/templates/home/page.html
@@ -6,5 +6,5 @@ Home
 
 {% block content %}
   <h1>All posts</h1>
-  {% include "commons/posts_list.html" %}
+  {% include "commons/posts/list.html" %}
 {% endblock %}
