--- a/src/templates/posts/view.html
+++ b/src/templates/posts/view.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}
-Add new post
+My posts
 {% endblock%}
 
 {% block content %}
-  <h1>Add post</h1>
-  {% include "commons/post_form.html" %}
+  <h1>Post {{ post.title }}</h1>
+  {% include "commons/posts/view.html" %}
 {% endblock %}
