--- a/src/templates/commons/navbar.html
+++ b/src/templates/commons/navbar.html
@@ -18,7 +18,7 @@
         <li><a href="/logout">Logout</a></li>
         {% else %}
         <li><a href="/login">Login</a></li>
-        <li><a href="/signup">Signup</a></li>
+        <li><a href="/register">Signup</a></li>
         {% endif %}
       </ul>
    </div>
