User can unlike post + display nb likes

--- a/src/templates/commons/posts/view.html
+++ b/src/templates/commons/posts/view.html
@@ -5,6 +5,6 @@
     <br>
     Created by {{ post.parent().username }} on {{ post.creation_date }}
     <br>
-    <h2><a href="/posts/like/{{post.key()}}">Like</a></h2>
+    <h2><a href="/posts/like/{{post.key()}}">{{ nb_likes }} Like</a></h2>
     <hr>
 {% endif %}
