Add delete comment

--- a/src/templates/commons/comments/list.html
+++ b/src/templates/commons/comments/list.html
@@ -3,6 +3,7 @@
     {% if user %}
       {% if comment.user.key() == user.key() %}
         <h3><a href="/posts/{{ post.key() }}/comments/edit/{{ comment.key() }}">Edit</a></h3>
+        <h3><a href="/posts/{{ post.key() }}/comments/delete/{{ comment.key() }}">Delete</a></h3>
       {% endif %}
     {% endif %}
     <span id="{{comment.key()}}">{{ comment.content }}</span>
