--- a/src/static/sass/master.scss
+++ b/src/static/sass/master.scss
@@ -1,2 +1,5 @@
-@import 'partials/custom-variables';
-@import 'bootstrap-sass/bootstrap';
+@import 'custom-variables';
+@import 'bootstrap';
+@import 'custom-bootstrap';
+@import 'custom-font-awesome';
+@import 'blog';
