--- a/src/templates/commons/navbar.html
+++ b/src/templates/commons/navbar.html
@@ -1,26 +1,24 @@
 {% block navbar %}
-<nav class="navbar navbar-default">
-   <div class="container">
-     <div class="navbar-header">
-       <a class="navbar-brand" href="/">Blog</a>
-     </div>
-     <ul class="nav navbar-nav navbar-right">
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Blog</a>
+      </div>
+
+
+      <a href="/register" class="btn btn-primary navbar-btn pull-right">Sign up</a>
+      <ul class="nav navbar-nav navbar-right">
+        {### USER MENU ###}
         {% if user %}
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Posts <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/posts">My posts</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="/posts/add">New post</a></li>
-          </ul>
-        </li>
-        <li><a href="/posts">{{ user.username }}</a></li>
-        <li><a href="/logout">Logout</a></li>
+          <li><a href="/posts">Posts</a></li>
+          <li><a href="/posts/add">New post</a></li>
+          <li><a href="/posts">{{ user.username }}</a></li>
+          <li><a href="/logout">Logout</a></li>
         {% else %}
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Signup</a></li>
+        {### VISITOR MENU ###}
+          <li><a href="/login">Login</a></li>
         {% endif %}
       </ul>
-   </div>
-</nav>
+    </div>
+  </nav>
 {% endblock %}
