--- a/src/templates/commons/pagination.html
+++ b/src/templates/commons/pagination.html
@@ -1,5 +1,5 @@
 {% block pagination %}
-  <nav aria-label="Page navigation">
+  <nav class="text-center" aria-label="Page navigation">
     <ul class="pagination">
       <li {% if pagination.current_page == 1 %} class="disabled" {% endif %}>
         <a {% if pagination.current_page > 1 %} href="./{{ pagination.current_page - 1 }}" {% endif %} aria-label="Previous">
@@ -7,7 +7,6 @@
         </a>
       </li>
 
-      {% set x = 1 %}
       {% for x in range(pagination.nb_items_before) %}
         {% set page_id = pagination.current_page - (pagination.nb_items_before - x) %}
         <li><a href="./{{ page_id }}">{{ page_id }}</a></li>
@@ -25,9 +24,6 @@
           <span aria-hidden="true">&raquo;</span>
         </a>
       </li>
-
-
-
     </ul>
   </nav>
 {% endblock %}
