--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/static/css/master.css">
   </head>
   <body>
-    <div class="top-page">
+    <div class="top-page {{ has_error }}">
       {% include "commons/navbar.html" %}
 
       <div class="jumbotron">
