--- a/src/templates/home/page.html
+++ b/src/templates/home/page.html
@@ -15,7 +15,7 @@
       <p class="text-right"><a class="btn btn-primary btn-lg" href="#" role="button">Sign up</a></p>
     </div>
     <div class="col-sm-5 text-center">
-      <i class="fa fa-telegram fa-20x" aria-hidden="true"></i>
+      <i class="fa fa-paper-plane fa-20x" aria-hidden="true"></i>
     </div>
   </div>
 {% endblock %}
