--- a/src/static/sass/_blog.scss
+++ b/src/static/sass/_blog.scss
@@ -2,15 +2,25 @@
 
 .top-page {
   background-image: url('../img/bg_blue_black.png');
+  padding-top: 10px;
+
+  &.has-error {
+    background-image: url('../img/bg_error_11.png');
+
+    & .btn, .btn-primary {
+      background-color: #a02a03;
+      border-color: #7d2306;
+    }
+  }
 }
 
 .posts {
-  .col-sm-6:nth-child(even) {
-    border-left: 1px dotted #c3c3c3;
-  }
-
   .col-sm-6 {
     border-top: 1px dotted #c3c3c3;
+
+    &:nth-child(even) {
+      border-left: 1px dotted #c3c3c3;
+    }
   }
 }
 
@@ -19,7 +29,7 @@
   border-bottom: 1px solid #d1d1d7;
 
   margin: 0 0 20px;
-  padding: 5px 15px;
+  padding: 15px;
 }
 
 .post-details {
